@@ -1,4 +1,4 @@
-This is version 2013042301 of Test::Regexp, a module to test regular
+This is version 2014052301 of Test::Regexp, a module to test regular
 expressions with.
 
 It's a pure perl module, and should install anywhere using
