@@ -1,3 +1,6 @@
+Version 2014052301 Fri May 23 20:49:03 CEST 2014
++ Allow surprising the "(with -Keep)" using the "no_keep_message" option.
+
 Version 2013042301 Tue Apr 23 16:07:05 CEST 2013
 + Fall back to using the pattern if neither name or comment are given.
 
